Fix right alignment table header numeric

--- a/documentation/demopages/common/table.scss
+++ b/documentation/demopages/common/table.scss
@@ -17,3 +17,7 @@
 .rvo-table-row.rvo-card:focus {
   background-color: var(--rvo-color-grijs-100);
 }
+
+.rvo-table-header--numeric .rvo-table-header__sortable-container {
+  justify-content: flex-end;
+}
